--- a/pokemon-page/css/styles.css
+++ b/pokemon-page/css/styles.css
@@ -4,12 +4,13 @@
 
 /* Task 1: First of all we want to adjust how the size of our elements is calculated when working with CSS. Do you know how to switch from "content-box" to "border-box"? */
 
-/* your solution */
+*{
+  box-sizing: border-box;
+}
 
 /* Task 2: Let's work on some basic stylings that we want to apply to all elements of your code via inheritance. Which selector do we need for this? */
 
-/* add selector */
- {
+ *{
   font-family: monospace;
   font-size: 1rem;
   line-height: 1.5;
@@ -20,7 +21,10 @@
 
 /* Task 3: To set the line height to 1.5 is good for texts, because of accessibility concerns, but for the headings it seems too much. Let's change this by giving our headings a line height of 1.2: */
 
-/* your solution */
+h1,
+h2 {
+  line-height: 1.2;
+}
 
 /* Task 4: Now we want to give our h1 element more styles to shine! Add the following styles by writing the correct declarations inside of the declaration block of the next CSS rule:
 
@@ -31,7 +35,10 @@
 */
 
 .title {
-  /* your solution */
+  background-color: rgb(255, 255, 255);
+  margin-top: 0px;
+  padding: 10px;
+  text-align: center;
 }
 
 /* ------- Sections ------- */
@@ -45,7 +52,14 @@
 */
 
 section {
-  /* your solution */
+  background-color:rgb(255, 255, 255);
+  padding: 20px;
+  margin: 10px;
+  border-left: 5px solid orange;
+}
+
+.favourites {
+  border-left: 5px solid gold;
 }
 
 /* ------- Headings Part 2 ------- */
@@ -59,7 +73,14 @@ section {
 */
 
 .subtitle {
-  /* your solution */
+  text-decoration: underline solid gold;
+  text-decoration-thickness: 3px;
+  text-underline-offset: 0.2em;
+  display: ;
+}
+
+.favourite-pokemon {
+  text-decoration-color: orange; 
 }
 
 /* ------- List ------- */
