--- a/pokemon-page/css/styles.css
+++ b/pokemon-page/css/styles.css
@@ -87,10 +87,10 @@ section {
 
 /* Task 7: Last but not least! We want to style our list with our favorite Pokémon. Which selector do we need? And also add values for the padding. */
 
-/* add selector */
+ul
  {
   list-style: "🧡";
-  padding-left: /* add value */ ;
+  padding-left: 10px;
 }
 
 /* add selector */
