--- a/social-card/css/styles.css
+++ b/social-card/css/styles.css
@@ -1,3 +1,28 @@
 * {
   box-sizing: border-box;
 }
+
+body {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  padding:20px;
+}
+
+img {
+  border-radius: 10px;
+}
+
+h2 {
+  text-transform: uppercase;
+}
+
+button {
+  background-color: rgb(255, 255, 255);
+  color:deepskyblue;
+  padding:0px;
+  border:none;  
+}
+
+.github-account {
+  color:rgb(127, 127, 127);
+}
+
