--- a/social-card/css/styles.css
+++ b/social-card/css/styles.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   padding:20px;
 }
 
