--- a/css/style.css
+++ b/css/style.css
@@ -11,4 +11,9 @@
 
 * {
     box-sizing: border-box;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+header {
+    background-color: greenyellow;
 }
