--- a/personal-website/css/style.css
+++ b/personal-website/css/style.css
@@ -12,8 +12,17 @@
 * {
     box-sizing: border-box;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: aliceblue;
 }
 
 header {
-    background-color: greenyellow;
+    background-image: linear-gradient(360deg, rgba(255,0,0,0), rgba(0,200,0,1));
+}
+
+h1 {
+    margin-bottom: 20px;
+}
+
+header > h1, p {
+    /*margin:0;*/
 }
