--- a/personal-website/css/style.css
+++ b/personal-website/css/style.css
@@ -16,13 +16,23 @@
 }
 
 header {
-    background-image: linear-gradient(360deg, rgba(255,0,0,0), rgba(0,200,0,1));
-}
-
-h1 {
-    margin-bottom: 20px;
 }
 
 header > h1, p {
     /*margin:0;*/
+}
+
+h1 {
+    background-image: linear-gradient(360deg, rgba(255,0,0,0), rgba(0,150,255,0.5));
+    margin-bottom: 20px;
+}
+
+header > img {
+    border-radius: 10px;
+    float: left;
+    margin-right: 10px;
+}
+
+header > p {
+    text-align:left;
 }
