--- a/personal-website/css/style.css
+++ b/personal-website/css/style.css
@@ -12,7 +12,7 @@
 * {
     box-sizing: border-box;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 16px;px;
+    font-size: 16px;
     background-color: aliceblue;
 }
 
@@ -52,12 +52,15 @@ section a::before {
 /*https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg 
 */
 
-header {
+/*header {
 }
+*/
 
+/*
 header > h1, p {
-    /*margin:0;*/
+    /margin:0;
 }
+*/
 
 h1 {
     background-image: linear-gradient(360deg, rgba(255,0,0,0), rgba(0,150,255,0.5));
@@ -78,9 +81,11 @@ header > p {
     text-align:left;
 }
 
+/*
 main {
 
 }
+*/
 
 footer > p {
     font-size: small;
