improve solution challenge absolute position

--- a/css-positioning_absolute-no-advanced-requirements/css/styles.css
+++ b/css-positioning_absolute-no-advanced-requirements/css/styles.css
@@ -46,8 +46,11 @@ main {
   background-color: #85c1e9;
   position:absolute;
   top:0;
-  left:210px;
-  right:210px;
+  /*left:210px;
+  right:210px;*/
+  left:50%;
+  transform:translate(-50%, 0);
+  
 }
 
 .box--top-right {
@@ -60,10 +63,13 @@ main {
 .box--center {
   background-color: #3498db;
   position:absolute;
-  top:260px;
+  /*top:260px;
   bottom:260px;
   left:210px;
-  right:210px;
+  right:210px;*/
+  top: 50%;
+  left:50%;
+  transform:translate(-50%, -50%);
 }
 
 .box--bottom-left {
@@ -77,8 +83,10 @@ main {
   background-color: #21618c;
   position:absolute;
   bottom:0;
-  left:210px;
-  right:210px;
+  /*left:210px;
+  right:210px;*/
+  left:50%;
+  transform:translate(-50%, 0);
 }
 
 .box--bottom-right {
