--- a/css-responsive_playground/css/styles.css
+++ b/css-responsive_playground/css/styles.css
@@ -64,6 +64,7 @@ h1 {
 
   width: 100px;
   height: 100px;
+  width: 50%;
 }
 
 .box--two {
@@ -71,6 +72,19 @@ h1 {
 
   width: 100px;
   height: 100px;
+  
+}
+
+@media screen and (min-width: 599px) {
+  .box--two {
+  width:200px;
+  }
+}
+
+@media screen and (min-width: 1199px) {
+  .box--two {
+  width:400px;
+  }
 }
 
 .box--three {
@@ -80,11 +94,25 @@ h1 {
   height: 250px;
 }
 
+@media (orientation: landscape) {
+  .box--three {
+  width: 250px;
+  height: 50px;
+  }
+}
+
 .box--four {
   background-color: lightgray;
 
   width: 100px;
   height: 100px;
+}
+
+@media (prefers-color-scheme: dark) {
+  .box--four {
+    background-color: rgb(0, 255, 200);
+  }
+  
 }
 
 .box--five {
@@ -94,3 +122,5 @@ h1 {
 .box--five img {
   width: 100%;
 }
+
+
