solve css-grid-service-gallery

--- a/css-grid_service-gallery/css/styles.css
+++ b/css-grid_service-gallery/css/styles.css
@@ -25,6 +25,10 @@ body {
   margin: auto;
 
   /* Add styles to the container */
+  display:grid;
+  grid-template-areas: 
+  "1fr 1fr 1fr"
+  "1fr 1fr 1fr";
 }
 
 .services__item {
