solve payment-cards

--- a/css-grid_payment-cards/css/styles.css
+++ b/css-grid_payment-cards/css/styles.css
@@ -27,6 +27,9 @@ body {
   max-width: 50rem;
 
   /* Add styles to the container */
+  display:grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;
 }
 
 .cards__option {
