--- a/css-animations_toast-animations/css/styles.css
+++ b/css-animations_toast-animations/css/styles.css
@@ -11,6 +11,10 @@ body {
   background-color: #e4e8f0;
 }
 
+.body-background {
+  background-color: rgb(71, 212, 94);
+}
+
 /* Start Button */
 
 .start-button {
@@ -21,9 +25,9 @@ body {
   border: none;
   font-size: 1.5rem;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-  /* transition: cubic-bezier(.04,-0.67,1,1.68), background 2s, color 5s, box-shadow 2s ease-out 3s; */
+  transition: cubic-bezier(.04,-0.67,1,1.68), background 2s, color 5s, box-shadow 2s ease-out 3s;
 }
-  
+ 
 /*
 .start-button:active {
   background-color: rgb(71, 212, 94);
@@ -47,7 +51,7 @@ body {
 
 /* Toast */
 
-@keyframes toast {
+@keyframes toast-keyframes {
   from {
     background: #e4e8f0;
     top: 20px;
@@ -82,6 +86,8 @@ body {
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 
   transition: transform 0.5s;
+
+  animation:toast-keyframes 5s infinite;
 }
 
 .toast--hidden {
@@ -107,3 +113,4 @@ body {
   width: 0%;
   transition: width linear 2000ms;
 }
+
